--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +21,8 @@
     "moment": "^2.29.4",
     "table": "^6.8.1",
     "web3": "^1.6.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
