--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "@ensdomains/ens-contracts": "^0.0.20",
     "@ensdomains/ensjs": "^3.0.0-alpha.59",
     "@ensdomains/eth-ens-namehash": "^2.0.15",
+    "dotenv": "^16.0.3",
     "ethereum-ens": "^0.8.0",
     "express": "^4.18.2",
     "memory-cache": "^0.2.0",
