--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "memory-cache": "^0.2.0",
     "moment": "^2.29.4",
+    "mongoose": "^7.0.4",
     "table": "^6.8.1",
     "web3": "^1.6.1"
   },
