--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "memory-cache": "^0.2.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.4",
+    "node-cron": "^3.0.2",
     "table": "^6.8.1",
     "web3": "^1.6.1"
   },
