--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.0.4",
     "node-cron": "^3.0.2",
+    "papaparse": "^5.4.1",
     "table": "^6.8.1",
     "web3": "^1.6.1"
   },
